--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^19.0.0",
     "@google/genai": "^1.34.0",
     "recharts": "^2.12.7",
-    "lucide-react": "^0.453.0"
+    "lucide-react": "^0.453.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
