--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,12 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "vite.config.ts"]
+  "exclude": [
+    "node_modules", 
+    "vite.config.ts", 
+    "index.tsx", 
+    "App.tsx", 
+    "page.tsx", 
+    "layout.tsx"
+  ]
 }
